Add New Relic monitoring

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ config/database.yml
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# ignore environment variables
+.env
