--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,4 +3,16 @@ languages:
   JavaScript: false
   PHP: false
   Python: false
-exclude_paths: []
+exclude_paths:
+  - "app/assets/javascripts/bootstrap.js"
+  - "app/assets/javascripts/jquery.contact.js"
+  - "app/assets/javascripts/jquery.easing.min.js"
+  - "app/assets/javascripts/jquery.easypiechart.js"
+  - "app/assets/javascripts/jquery.gridrotator.js"
+  - "app/assets/javascripts/jquery.isotope.js"
+  - "app/assets/javascripts/jquery.min.js"
+  - "app/assets/javascripts/jquery.placeholder.js"
+  - "app/assets/javascripts/jquery.ui.rlightbox.js"
+  - "app/assets/javascripts/jquery.ui.widget.min.js"
+  - "app/assets/javascripts/modernizr.js"
+  - "app/assets/javascripts/waypoint.js"
