--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,8 +1,37 @@
-languages:
-  Ruby: true
-  JavaScript: false
-  PHP: false
-  Python: false
+engines:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  fixme:
+    enabled: true
+  rubocop:
+    enabled: true
+ratings:
+  paths:
+    - Gemfile.lock
+    - "**.erb"
+    - "**.haml"
+    - "**.rb"
+    - "**.rhtml"
+    - "**.slim"
+    - "**.css"
+    - "**.inc"
+    - "**.js"
+    - "**.jsx"
+    - "**.module"
+    - "**.php"
+    - "**.py"
 exclude_paths:
   - "app/assets/javascripts/bootstrap.js"
   - "app/assets/javascripts/jquery.contact.js"
