--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "resolve-url-loader": "^2.0.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "turbolinks": "^5.0.3",
     "waypoints": "^4.0.1",
     "webpack": "^2.6.1",
     "webpack-manifest-plugin": "^1.1.0",
