--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,6 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-config/initializers/secret_token.rb
-config/database.yml
-
 /.bundle
 /.capistrano
 /vendor/bundle
@@ -24,6 +21,7 @@ config/database.yml
 
 .env
 
-/config/application.yml
 /public/packs
 /node_modules
+
+db/schema.rb
