Update heroku app.json script and credentials

--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,4 @@ test:
 #     url: <%ra= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: gmmcalcombr_production
-  username: gmmcalcombr
-  password: <%= ENV['GMMCALCOMBR_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
