--- a/app.json
+++ b/app.json
@@ -1,9 +1,15 @@
 {
   "name": "Gustavo Cunha",
   "description": "Personal Website",
+  "website": "https://www.gmmcal.com.br/",
+  "repository": "https://github.com/gmmcal/gmmcal.com.br",
   "scripts": {
+    "postdeploy": "bundle exec rake db:migrate"
   },
   "env": {
+    "DATABASE_URL": {
+      "required": true
+    },
     "LANG": {
       "required": true
     },
@@ -23,7 +29,12 @@
   "formation": {
   },
   "addons": [
-
+    {
+      "plan": "heroku-postgresql",
+      "options": {
+        "version": "9.6.1"
+      }
+    }
   ],
   "buildpacks": [
     {
