Add library to retrieve data from Contentful
Also, fix validations and change names of attributes in models

Fixes #69

--- a/app.json
+++ b/app.json
@@ -7,6 +7,12 @@
     "postdeploy": "bundle exec rake db:migrate"
   },
   "env": {
+    "CONTENTFUL_SPACE": {
+      "required": true
+    },
+    "CONTENTFUL_TOKEN": {
+      "required": true
+    },
     "DATABASE_URL": {
       "required": true
     },
