--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,5 +7,11 @@ AllCops:
     - 'node_modules/**/*'
     - 'vendor/**/*'
 
+Style/PercentLiteralDelimiters:
+  PreferredDelimiters:
+    default: ()
+    '%i': '[]'
+    '%w': '[]'
+
 Documentation:
   Enabled: false
