--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gmmcal.com.br",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^3.0.2",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
@@ -10,13 +11,12 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.2",
     "bootstrap": "^3.3.7",
-    "coffee-loader": "^0.7.3",
-    "coffee-script": "^1.12.6",
+    "caniuse-lite": "^1.0.30000758",
+    "coffeescript": "1.12.7",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.4",
     "easy-pie-chart": "^2.1.7",
     "ekko-lightbox": "^5.1.1",
-    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.2",
     "glob": "^7.1.2",
     "isotope-layout": "^3.0.4",
@@ -35,11 +35,9 @@
     "style-loader": "^0.18.2",
     "turbolinks": "^5.0.3",
     "waypoints": "^4.0.1",
-    "webpack": "^2.6.1",
-    "webpack-manifest-plugin": "^1.1.0",
-    "webpack-merge": "^4.1.0"
+    "webpack": "^3.8.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.9.4"
   }
 }
