--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: ruby
 cache: bundler
 rvm:
   - 2.4.4
+
+before_install:
+  - gem update --system
+
 before_script:
   - cp config/secrets.yml.travis config/secrets.yml
 
