Update services configuration

--- a/.ebert.yml
+++ b/.ebert.yml
@@ -1,6 +1,4 @@
 engines:
-  rubocop:
-    enabled: true
   brakeman:
     enabled: true
   bundler-audit:
@@ -22,4 +20,6 @@ pull_requests:
 exclude_paths:
   - "app/assets/javascripts/jquery.gridrotator.js"
   - "app/assets/javascripts/jquery.placeholder.js"
+  - "app/javascripts/packs/jquery.gridrotator.js"
+  - "app/javascripts/packs/jquery.placeholder.js"
   - "spec/"
