--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,22 +1,20 @@
 engines:
   brakeman:
-    enabled: true
+    enabled: false
   bundler-audit:
-    enabled: true
+    enabled: false
   csslint:
-    enabled: true
+    enabled: false
   duplication:
     enabled: true
     config:
       languages:
-      - ruby
-      - javascript
-      - python
-      - php
+        - ruby
+        - javascript
   fixme:
     enabled: true
   rubocop:
-    enabled: true
+    enabled: false
 ratings:
   paths:
     - Gemfile.lock
@@ -31,4 +29,6 @@ ratings:
 exclude_paths:
   - "app/assets/javascripts/jquery.gridrotator.js"
   - "app/assets/javascripts/jquery.placeholder.js"
+  - "app/javascripts/packs/jquery.gridrotator.js"
+  - "app/javascripts/packs/jquery.placeholder.js"
   - "spec/"
