--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -29,4 +29,5 @@ ratings:
 exclude_paths:
   - "app/javascript/packs/jquery.gridrotator.js"
   - "app/javascript/packs/jquery.placeholder.js"
+  - "app/assets/stylesheets/font-awesome.css.scss"
   - "spec/"
