--- a/.ebert.yml
+++ b/.ebert.yml
@@ -20,4 +20,5 @@ pull_requests:
 exclude_paths:
   - "app/javascript/packs/jquery.gridrotator.js"
   - "app/javascript/packs/jquery.placeholder.js"
+  - "app/assets/stylesheets/font-awesome.css.scss"
   - "spec/"
