--- a/.ebert.yml
+++ b/.ebert.yml
@@ -20,5 +20,7 @@ pull_requests:
 exclude_paths:
   - "app/javascript/packs/jquery.gridrotator.js"
   - "app/javascript/packs/jquery.placeholder.js"
+  - "app/assets/stylesheets/application.css.scss"
   - "app/assets/stylesheets/font-awesome.css.scss"
+  - "app/assets/stylesheets/responsive.css.scss"
   - "spec/"
