--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ db/schema.rb
 /public/packs
 /public/packs-test
 /node_modules
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
