--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gmmcal.com.br",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.0.2",
+    "@rails/webpacker": "3.5",
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.25.0",
     "babel-loader": "7.x",
@@ -38,6 +38,6 @@
     "webpack": "^3.8.1"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "2.11.2"
   }
 }
