--- a/package.json
+++ b/package.json
@@ -3,39 +3,11 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "7.x",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
     "bootstrap": "^3.3.7",
-    "caniuse-lite": "^1.0.30000758",
-    "coffeescript": "1.12.7",
-    "compression-webpack-plugin": "^0.4.0",
-    "css-loader": "^0.28.4",
-    "easy-pie-chart": "^2.1.7",
-    "ekko-lightbox": "^5.1.1",
-    "file-loader": "^0.11.2",
-    "glob": "^7.1.2",
-    "isotope-layout": "^3.0.4",
-    "jquery": "^3.2.1",
-    "jquery.easing": "^1.4.1",
-    "js-yaml": "^3.8.4",
-    "node-sass": "^4.5.3",
-    "path-complete-extname": "^0.1.0",
-    "postcss-loader": "^2.0.6",
-    "postcss-smart-import": "^0.7.4",
-    "precss": "^1.4.0",
-    "rails-erb-loader": "^5.0.2",
-    "rails-ujs": "^5.1.1",
-    "resolve-url-loader": "^2.0.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "turbolinks": "^5.0.3",
-    "waypoints": "^4.0.1",
-    "webpack": "^3.8.1"
+    "turbolinks": "^5.1.1",
+    "vue": "^2.5.16",
+    "vue-loader": "14.2.2",
+    "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
