Update ignored files

--- a/.ebert.yml
+++ b/.ebert.yml
@@ -18,8 +18,6 @@ pull_requests:
   comments: false
 
 exclude_paths:
-  - "app/javascript/packs/jquery.gridrotator.js"
-  - "app/javascript/packs/jquery.placeholder.js"
-  - "app/assets/stylesheets/application.css.scss"
-  - "app/assets/stylesheets/font-awesome.css.scss"
+  - "app/assets/stylesheets/application.scss"
+  - "app/assets/stylesheets/font-awesome.scss"
   - "spec/"
