--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -27,8 +27,6 @@ ratings:
     - "**.php"
     - "**.py"
 exclude_paths:
-  - "app/javascript/packs/jquery.gridrotator.js"
-  - "app/javascript/packs/jquery.placeholder.js"
-  - "app/assets/stylesheets/application.css.scss"
-  - "app/assets/stylesheets/font-awesome.css.scss"
+  - "app/assets/stylesheets/application.scss"
+  - "app/assets/stylesheets/font-awesome.scss"
   - "spec/"
