--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vue-turbolinks": "^2.0.3"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
