--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gmmcal.com.br",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "3.5",
+    "@rails/webpacker": "^3.5",
     "bootstrap": "^3.3.7",
     "i18n-js": "^3.0.8",
     "turbolinks": "^5.1.1",
@@ -12,6 +12,6 @@
     "vue-turbolinks": "^2.0.3"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^2.11.2"
   }
 }
