--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.5",
     "bootstrap": "^3.3.7",
+    "easy-pie-chart": "^2.1.7",
     "i18n-js": "^3.0.8",
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
