--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ db/schema.rb
 /node_modules
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
