--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
+    "vue-markdown": "^2.2.4",
     "vue-template-compiler": "^2.5.16",
     "vue-turbolinks": "^2.0.3"
   },
