Ignore webpack folder

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -29,4 +29,5 @@ ratings:
 exclude_paths:
   - "app/assets/stylesheets/application.scss"
   - "app/assets/stylesheets/font-awesome.scss"
+  - "config/webpack/**.js"
   - "spec/"
