Add tests to Vue components

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ install:
 script:
   - bundle exec rake db:migrate
   - bundle exec rspec
+  - yarn test:once
 
 bundler_args: --without production
 
