--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ rvm:
   - 2.5.1
 
 before_install:
-  - gem update --system
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - gem update --system
 
 before_script:
   - cp config/database.yml.travis config/database.yml
@@ -36,7 +36,4 @@ script:
 bundler_args: --without production
 
 after_script:
-  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json
-  - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
-  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi
+  - ./cc-test-reporter after-build --exit-code $EXIT_CODE
