--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,44 @@
-engines:
+version: "2"
+
+checks:
+  argument-count:
+    enabled: true
+    config:
+      threshold: 4
+  complex-logic:
+    enabled: true
+    config:
+      threshold: 4
+  file-lines:
+    enabled: true
+    config:
+      threshold: 250
+  method-complexity:
+    enabled: true
+    config:
+      threshold: 5
+  method-count:
+    enabled: true
+    config:
+      threshold: 20
+  method-lines:
+    enabled: true
+    config:
+      threshold: 25
+  nested-control-flow:
+    enabled: true
+    config:
+      threshold: 4
+  return-statements:
+    enabled: true
+    config:
+      threshold: 4
+  similar-code:
+    enabled: true
+  identical-code:
+    enabled: true
+
+plugins:
   brakeman:
     enabled: false
   bundler-audit:
@@ -15,19 +55,20 @@ engines:
     enabled: true
   rubocop:
     enabled: false
-ratings:
-  paths:
-    - Gemfile.lock
-    - "**.erb"
-    - "**.rb"
-    - "**.css"
-    - "**.js"
-    - "**.jsx"
-    - "**.module"
-    - "**.php"
-    - "**.py"
-exclude_paths:
+
+exclude_patterns:
   - "app/assets/stylesheets/application.scss"
   - "app/assets/stylesheets/font-awesome.scss"
-  - "config/webpack/**.js"
-  - "spec/"
+  - "config/"
+  - "db/"
+  - "dist/"
+  - "features/"
+  - "**/node_modules/"
+  - "script/"
+  - "**/spec/"
+  - "**/test/"
+  - "**/tests/"
+  - "Tests/"
+  - "**/vendor/"
+  - "**/*_test.go"
+  - "**/*.d.ts"
