--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "bootstrap": "^4.1.3",
     "easy-pie-chart": "^2.1.7",
     "i18n-js": "^3.0.8",
+    "marked": "^0.5.0",
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
-    "vue-markdown": "^2.2.4",
     "vue-template-compiler": "^2.5.16",
     "vue-turbolinks": "^2.0.3",
     "yarn": "^1.9.4"
