--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "@rails/webpacker": "^3.5",
-    "add": "^2.0.6",
     "blazy": "^1.8.2",
     "bootstrap": "^4.1.3",
     "easy-pie-chart": "^2.1.7",
@@ -24,6 +23,7 @@
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-jest": "^23.2.0",
+    "cypress": "^3.1.0",
     "jest": "^23.2.0",
     "jest-canvas-mock": "^1.0.3",
     "jest-serializer-vue": "^2.0.2",
@@ -71,6 +71,8 @@
   },
   "scripts": {
     "test": "jest --watch",
-    "test:once": "jest"
+    "test:once": "jest",
+    "cypress": "rake db:setup && cypress open",
+    "cypress:ci": ""
   }
 }
