--- a/package.json
+++ b/package.json
@@ -73,6 +73,6 @@
     "test": "jest --watch",
     "test:once": "jest",
     "cypress": "rake db:setup && cypress open",
-    "cypress:ci": ""
+    "cypress:ci": "cypress run"
   }
 }
