Update to codeclimate and rubocop offenses

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -61,14 +61,6 @@ exclude_patterns:
   - "app/assets/stylesheets/font-awesome.scss"
   - "config/"
   - "db/"
-  - "dist/"
-  - "features/"
   - "**/node_modules/"
-  - "script/"
-  - "**/spec/"
-  - "**/test/"
-  - "**/tests/"
-  - "Tests/"
+  - spec/"
   - "**/vendor/"
-  - "**/*_test.go"
-  - "**/*.d.ts"
