--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -64,3 +64,7 @@ exclude_patterns:
   - "**/node_modules/"
   - "spec/"
   - "**/vendor/"
+  - "*.md"
+  - "app/assets/images/"
+  - ".*"
+  - "app/javascript/packs/i18n/"
