Split travis process into stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,20 @@
 language: ruby
 
+rvm:
+  - 2.3.7
+  - 2.4.4
+  - 2.5.0
+  - 2.5.1
+
 cache:
   - bundler
   - yarn
 
 before_install:
   - gem update --system
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 before_script:
   - cp config/database.yml.travis config/database.yml
@@ -28,31 +37,25 @@ install:
 #   - kill $(jobs -p) || true
 
 stages:
-  - unit-tests
+  - prepare cache
+  - unit tests
   - end-to-end
 
 jobs:
   include:
-    - stage: unit-tests
-      rvm:
-        - 2.3.7
-        - 2.4.4
-        - 2.5.0
-        - 2.5.1
-      before_install:
-        - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        - chmod +x ./cc-test-reporter
-        - ./cc-test-reporter before-build
+    - stage: prepare cache
+      script: true
+    - stage: unit tests
       script:
         - bundle exec rspec
+        - yarn test:once
       after_script:
         - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json
         - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info
         - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
         - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi
     - stage: end-to-end
-      rvm:
-        - 2.5.1
+      rvm: 2.5.1
       script:
         - bin/webpack
         - bundle exec rake db:seed
@@ -61,4 +64,3 @@ jobs:
         - kill $(jobs -p) || true
 
 bundler_args: --without production
-
