Split travis process into stages

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,18 @@ stages:
 jobs:
   include:
     - stage: prepare cache
+      rvm:
+        - 2.3.7
+        - 2.4.4
+        - 2.5.0
+        - 2.5.1
       script: true
     - stage: unit tests
+      rvm:
+        - 2.3.7
+        - 2.4.4
+        - 2.5.0
+        - 2.5.1
       script:
         - bundle exec rspec
         - yarn test:once
