Test staging deploy via travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,17 +64,19 @@ jobs:
         - bundle exec rails server -p 3000 &
         - yarn cypress:ci
         - kill $(jobs -p) || true
-    - stage: deploy to staging
+    - stage: deploy
       script: skip
       deploy: &heroku
         provider: heroku
         app: gmmcal-dev
         api_key: $HEROKU_AUTH_TOKEN
-    - stage: deploy to production
+        on:
+          all_branches: true
+    - stage: deploy
       script: skip
       deploy: &heroku
         provider: heroku
-        app: gmmcal-dev
+        app: gmmcal
         api_key: $HEROKU_AUTH_TOKEN
         on:
           all_branches: true
