End-to-End Tests (#106)
* Update all dependencies

* Prepare end-to-end test environment

* Add navigation end-to-end tests

* Add content end-to-end tests

* Add viewport end-to-end tests

* Add integration tests to CI

* Add seed to CI process

* Fix test enviroment on CI

* Remove video rendering from CI run

* Optimize CI run

* Update to codeclimate and rubocop offenses

* Update to codeclimate

* Ignore unecessary review files on codeclimate

* Try to fix travis chrome failures

* Split travis process into stages

* Split travis process into stages

* Split travis process into stages

* Split travis process into stages

* Change caching strategy for travis

* Fix travis configuration

* Move all tests to a single file to demand less from Travis

* Rename file, update cypress config and ignore tests without code

* Fix snapshots

* Rollback to separate test files

* Remove animation on menu

* Trying to use chrome instead of electron to fix CI

* Extract component behavior methods to separate functions

* Refactor handleScroll functions

* Use object props for better understanding

* Use beforeEach and afterEach on JS tests

* Fix issue with I18n Flags

* Fix markdown/image issues on internet explorer

Fixes #105

* Fix specs

* Fix warning caused by props validation

* Update viewport sizes for more devices.

* Add test to social

* Remove ; in JS

* Add heroky deployment to travis

* Skip tests on deploy

* Test staging deploy via travis

* Improve travis script

* Add task to populate staging DB on deploy

* Fix rubocop issues

* Improve README

Fixes #100

* Add more badges

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -61,14 +61,10 @@ exclude_patterns:
   - "app/assets/stylesheets/font-awesome.scss"
   - "config/"
   - "db/"
-  - "dist/"
-  - "features/"
   - "**/node_modules/"
-  - "script/"
-  - "**/spec/"
-  - "**/test/"
-  - "**/tests/"
-  - "Tests/"
+  - "spec/"
   - "**/vendor/"
-  - "**/*_test.go"
-  - "**/*.d.ts"
+  - "*.md"
+  - "app/assets/images/"
+  - ".*"
+  - "app/javascript/packs/i18n/"
