--- a/.travis.yml
+++ b/.travis.yml
@@ -1,42 +1,100 @@
 language: ruby
 
 cache:
-  - bundler
-  - yarn
+  directories:
+    - /home/travis/.rvm
+    - /home/travis/.npm
+    - /home/travis/.cache
 
-rvm:
-  - 2.3.7
-  - 2.4.4
-  - 2.5.0
-  - 2.5.1
+common: &common
+  before_install:
+    - gem update --system
 
-before_install:
-  - gem update --system
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-  - chmod +x ./cc-test-reporter
-  - ./cc-test-reporter before-build
+  before_script:
+    - cp config/database.yml.travis config/database.yml
+    - cp config/secrets.yml.travis config/secrets.yml
+    - psql -c 'create database travis_ci_test;' -U postgres
+    - bundle exec rake db:migrate
 
-before_script:
-  - cp config/database.yml.travis config/database.yml
-  - cp config/secrets.yml.travis config/secrets.yml
-  - psql -c 'create database travis_ci_test;' -U postgres
+  install:
+    - bundle install
+    - nvm install node
+    - npm i -g yarn
+    - yarn install
 
-install:
-  - bundle install
-  - nvm install node
-  - node -v
-  - npm i -g yarn
-  - yarn
+tests: &tests
+  <<: *common
+  before_install:
+    - gem update --system
+    - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+    - chmod +x ./cc-test-reporter
+    - ./cc-test-reporter before-build
 
-script:
-  - bundle exec rake db:migrate
-  - bundle exec rspec
-  - yarn test:once
+  script:
+    - bundle exec rspec
+    - yarn test:once
+
+  after_script:
+    - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json
+    - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info
+    - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
+    - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi
+
+jobs:
+  include:
+    - stage: unit tests
+      rvm: 2.3.7
+      <<: *tests
+
+    - stage: unit tests
+      rvm: 2.4.4
+      <<: *tests
+
+    - stage: unit tests
+      rvm: 2.5.0
+      <<: *tests
+
+    - stage: unit tests
+      rvm: 2.5.1
+      <<: *tests
+
+    - stage: end-to-end tests
+      rvm: 2.5.1
+      addons:
+        chrome: stable
+
+      <<: *common
+      before_install:
+        - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 &
+
+      script:
+        - bin/webpack
+        - bundle exec rake db:seed
+        - bundle exec rails server -p 3000 &
+        - yarn cypress:ci
+        - kill $(jobs -p) || true
+
+    - stage: deploy
+      script: skip
+      deploy: &heroku
+        provider: heroku
+        app: gmmcal-dev
+        api_key: $HEROKU_AUTH_TOKEN
+        run:
+          - "rake db:migrate"
+          - "rake db:staging"
+        on:
+          branch: master
+
+    - stage: deploy
+      script: skip
+      deploy: &heroku
+        provider: heroku
+        app: gmmcal
+        api_key: $HEROKU_AUTH_TOKEN
+        run: "rake db:migrate"
+        on:
+          all_branches: true
+          tags: true
 
 bundler_args: --without production
-
-after_script:
-  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.backend.json coverage/backend/.resultset.json
-  - ./cc-test-reporter format-coverage -t lcov -o coverage/codeclimate.frontend.json coverage/frontend/lcov.info
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
-  - if [[ "$TRAVIS_TEST_RESULT" == 0 ]]; then ./cc-test-reporter upload-coverage; fi
