--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "jest": {
     "verbose": true,
     "roots": [
-      "spec/javascript",
+      "spec/frontend/javascript",
       "app/javascript/packs"
     ],
     "setupFiles": [
