Remove admin translations from frontend I18n JS files

--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -2,10 +2,17 @@ export_i18n_js: false
 sort_translation_keys: false
 fallbacks: false
 
+except: &except
+  except:
+    - "*.simple_form"
+    - "*.admin"
+
 translations:
   - file: "app/javascript/packs/i18n/en.js"
     only: 'en.*'
     pretty_print: true
+    <<: *except
   - file: "app/javascript/packs/i18n/pt-BR.js"
     only: 'pt-BR.*'
     pretty_print: true
+    <<: *except
