--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.1.3",
     "i18n-js": "^3.0.8",
     "marked": "^0.5.0",
+    "rails-ujs": "^5.2.1",
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
