--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "@rails/webpacker": "^3.5",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "i18n-js": "^3.0.8",
     "marked": "^0.5.0",
     "rails-ujs": "^5.2.1",
