--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "i18n-js": "^3.0.8",
     "marked": "^0.5.0",
     "rails-ujs": "^5.2.1",
+    "sortablejs": "^1.7.0",
     "turbolinks": "^5.1.1",
     "vue": "^2.5.16",
     "vue-loader": "14.2.2",
