Update serialize js function and add tests

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "collectCoverage": true,
     "collectCoverageFrom": [
       "app/javascript/packs/components/**/*.{js,vue}",
+      "app/javascript/packs/functional/**/*.{js}",
       "!**/node_modules/**"
     ],
     "coverageReporters": [
