--- a/package.json
+++ b/package.json
@@ -1,6 +1,54 @@
 {
   "name": "gmmcal.com.br",
   "private": true,
+  "description": "My personal website code, playground and learning lab.",
+  "version": "2.0.0",
+  "homepage": "https://www.gmmcal.com.br",
+  "repository": "https://github.com/gmmcal/gmmcal.com.br",
+  "bugs": {
+    "url" : "https://github.com/gmmcal/gmmcal.com.br/issues",
+    "email" : "bugs@gmmcal.com.br"
+  },
+  "author": {
+    "name": "Gustavo Cunha",
+    "email" : "contact@gmmcal.com.br",
+    "url" : "https://www.gmmcal.com.br"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/gmmcal/gmmcal.com.br/blob/master/LICENSE"
+    }
+  ],
+  "contributors": [
+    {
+      "name": "Gustavo Cunha",
+      "email" : "contact@gmmcal.com.br",
+      "url" : "https://www.gmmcal.com.br"
+    }
+  ],
+  "keywords": [
+    "ruby",
+    "rails",
+    "vuejs2",
+    "jest",
+    "rspec",
+    "ruby-on-rails",
+    "cypress",
+    "end-to-end-testing",
+    "end-to-end",
+    "travis-ci",
+    "ebert",
+    "codeclimate",
+    "hakiri",
+    "heroku",
+    "ci-cd"
+  ],
+  "engines" : {
+    "node" : ">=10.0.0",
+    "npm" : ">=6.4.0",
+    "yarn" : ">=1.10.0"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-brands-svg-icons": "^5.2.0",
