--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
       script:
         - bin/webpack
         - bundle exec rails db:seed
-        - bundle exec END2END=1 rails server -p 3000 &
+        - bundle exec rails server -p 3000 &
         - yarn cypress:ci
         - kill $(jobs -p) || true
 
