--- a/package.json
+++ b/package.json
@@ -122,6 +122,6 @@
     "test": "jest --watch",
     "test:once": "jest",
     "cypress": "rake db:setup && cypress open",
-    "cypress:ci": "cypress run --browser chrome --record --parallel"
+    "cypress:ci": "cypress run --browser chrome --record"
   }
 }
