--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "website": "https://www.gmmcal.com.br/",
   "repository": "https://github.com/gmmcal/gmmcal.com.br",
   "scripts": {
-    "postdeploy": "bundle exec rake db:migrate db:seed db:staging"
+    "postdeploy": "bundle exec rake db:migrate db:seed db:seed:all"
   },
   "env": {
     "RAILS_MASTER_KEY": {
